Use shared docker-hub context
This context provides the appropriate docker auth setup so the
build can push images to Docker Hub. Though the build already
had this configured, the shared context allows for central
management of the underlying authorization.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,3 +12,9 @@ jobs:
             docker build --rm=false -t "keepnetwork/texlive:$CIRCLE_BUILD_NUM" .
             docker login -u "$DOCKER_USER" -p "$DOCKER_PASS"
             docker push "keepnetwork/texlive:$CIRCLE_BUILD_NUM"
+workflows:
+  version: 2
+  push-image:
+    jobs:
+      - build:
+          context: docker-hub
